creating response/request dto for produto, and fixing object return type at update categoria method